--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@reduxjs/toolkit": "^2.2.1",
@@ -21,8 +22,10 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
