create chat and send message in user dashboard

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MONGO_URL=mongodb+srv://amir:amir@cluster0.8hesari.mongodb.net/beta
 JWT_SECRET=12323
 NEXTAUTH_URL= http://localhost:3000
 NEXTAUTH_SECRET = bdyfHpTZUlitCqDvPaOSzwfnFQAZtnl16SEKeYcf0uM=
+PUSHER_APP_ID= 1771110
+PUSHER_APP_KEY= 6456a904928e29901ca4
+PUSHER_SECRET_KEY= 4326bd539e55f7d19a96
+PUSHER_CLUSTER= eu
