--- a/package.json
+++ b/package.json
@@ -14,19 +14,33 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
+    "input-otp": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.358.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "next-themes": "^0.3.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "sonner": "^1.4.3",
     "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
