--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "input-otp": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.358.0",
+    "moment-jalaali": "^0.10.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
