--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/amirvosoughi17/beta.git",
+  "author": "amirvosoughi17 <amir11.vosoughi@gmail.com>",
+  "license": "MIT"
 }
