--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.358.0",
