--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.3.0",
+    "node-cron": "^3.0.3",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
