--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-auth": "^4.24.6",
     "next-themes": "^0.3.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
