--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.3.0",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "pusher": "^5.2.0",
