--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "sharp": "^0.33.3",
     "sonner": "^1.4.3",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
