--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@next/font": "^14.2.4",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-direction": "^1.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.7.0",
-    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "cobe": "^0.6.3",
+    "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.2.13",
     "input-otp": "^1.2.4",
     "lenis": "^1.1.3",
     "lucide-react": "^0.395.0",
@@ -35,23 +41,27 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.52.0",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
+    "react-spring": "^9.7.3",
     "react-type-animation": "^3.2.0",
     "react-use-measure": "^2.1.1",
     "styled-components": "^6.1.11",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
   }
