--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lenis": "^1.1.3",
     "lucide-react": "^0.395.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -52,12 +52,14 @@
     "react-spring": "^9.7.3",
     "react-type-animation": "^3.2.0",
     "react-use-measure": "^2.1.1",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
