--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-type-animation": "^3.2.0",
     "react-use-measure": "^2.1.1",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
