--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.2.13",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
     "lenis": "^1.1.3",
     "lucide-react": "^0.395.0",
     "mini-svg-data-uri": "^1.4.4",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
