--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.4",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.0",
@@ -28,7 +29,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tabler/icons-react": "^3.7.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -50,7 +51,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.52.2",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-spring": "^9.7.3",
@@ -61,7 +62,8 @@
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
