add zod validation for form fields

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
