get user data in userContext in global , delete messages

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-use-measure": "^2.1.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
+    "sonner": "^1.5.0",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
